--- a/style.css
+++ b/style.css
@@ -103,9 +103,10 @@ body {
   text-align: left;
 }
 
-.weather {
+/* .weather {
   display: none;
-}
+} */
+
 .error {
   text-align: left;
   margin-left: 10px;
